tests/ui/badreserved.stderr
error: expected one of: `$`, parentheses, curly braces, identifier
  --> ui/badreserved.rs:10:6
   |
10 |     $[ future ]
   |      ^

error: expected one of: `$`, parentheses, curly braces, identifier
  --> ui/badreserved.rs:15:6
   |
15 |     $< paste? >
   |      ^

error: expected one of: `$`, parentheses, curly braces, identifier
  --> ui/badreserved.rs:20:6
   |
20 |     $r#"template content?"#
   |      ^^^^^^^^^^^^^^^^^^^^^^

error: inner attributes are reserved syntax, anywhere in derive-adhoc templates
  --> ui/badreserved.rs:27:9
   |
27 |         //! template doc comment?
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `define_derive_adhoc`
 --> ui/badreserved.rs:3:20
  |
3 | use derive_adhoc::{define_derive_adhoc, derive_adhoc, Adhoc};
  |                    ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
